# o-browser

./: .gitignore  CLAUDE.md  Dockerfile  README.md  api-server.js  end-session.sh  har-recorder.js  package.json  pyproject.toml  session-recorder.js  start-session.sh
.github/workflows/: docker.yml
o_browser/: __init__.py  _mixin.py  cli.py  client.py  remote.py
service/: session-recorder.js  start-session.sh
