[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "o-browser"
version = "0.1.0"
description = "Browser automation — direct (launch Chrome) and remote (CDP connect)"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Alexis Laporte" }]
dependencies = ["patchright>=1.0.0"]

[project.optional-dependencies]
cli = ["typer>=0.9.0"]

[tool.hatch.build.targets.wheel]
packages = ["o_browser"]
